--- a/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
@@ -356,9 +356,9 @@
                                                                 <constraint firstAttribute="height" constant="128" id="zmO-6k-LSg"/>
                                                             </constraints>
                                                         </view>
-                                                        <textField hidden="YES" opaque="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Say Something ..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="env-Bq-6cz">
+                                                        <textField opaque="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Say Something ..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="env-Bq-6cz">
                                                             <rect key="frame" x="20" y="673" width="230" height="35"/>
-                                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="35" id="6KC-zc-Uhy"/>
@@ -1623,7 +1623,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </textField>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="lightTextColor"/>
+                                                <color key="backgroundColor" systemColor="separatorColor"/>
                                                 <constraints>
                                                     <constraint firstItem="f1y-mm-eQf" firstAttribute="leading" secondItem="Crf-RX-dan" secondAttribute="leading" constant="16" id="0WL-fD-7L8"/>
                                                     <constraint firstItem="f1y-mm-eQf" firstAttribute="centerY" secondItem="Crf-RX-dan" secondAttribute="centerY" id="AYB-HV-2c6"/>
@@ -1866,7 +1866,7 @@
                                                                 </userDefinedRuntimeAttribute>
                                                             </userDefinedRuntimeAttributes>
                                                         </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtf-Mk-4HV">
+                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtf-Mk-4HV">
                                                             <rect key="frame" x="20" y="293" width="290" height="150"/>
                                                             <subviews>
                                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v8z-s4-xX0">
@@ -2487,8 +2487,8 @@
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         </button>
-                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Pb-oR-fq6">
-                                                            <rect key="frame" x="15" y="667.66666666666663" width="260" height="46"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Pb-oR-fq6">
+                                                            <rect key="frame" x="20" y="667.66666666666663" width="255" height="46"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lSe-mU-585">
                                                                     <rect key="frame" x="16" y="13.666666666666664" width="20" height="19"/>
@@ -2498,8 +2498,8 @@
                                                                         <constraint firstAttribute="height" constant="20" id="gwL-9X-GTY"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Write something" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rqf-i0-gW1">
-                                                                    <rect key="frame" x="46" y="0.33333333333337123" width="206" height="45"/>
+                                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Write something" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rqf-i0-gW1">
+                                                                    <rect key="frame" x="46" y="0.33333333333337123" width="201" height="45"/>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="45" id="uQe-7N-Aw1"/>
@@ -2513,16 +2513,25 @@
                                                                         </userDefinedRuntimeAttribute>
                                                                     </userDefinedRuntimeAttributes>
                                                                 </textField>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dh3-5J-avc">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="255" height="46"/>
+                                                                    <state key="normal" title="Button"/>
+                                                                    <buttonConfiguration key="configuration" style="plain"/>
+                                                                </button>
                                                             </subviews>
-                                                            <color key="backgroundColor" systemColor="secondaryLabelColor"/>
+                                                            <color key="backgroundColor" systemColor="separatorColor"/>
                                                             <constraints>
                                                                 <constraint firstItem="Rqf-i0-gW1" firstAttribute="leading" secondItem="lSe-mU-585" secondAttribute="trailing" constant="10" id="9hy-JE-eWo"/>
+                                                                <constraint firstAttribute="trailing" secondItem="dh3-5J-avc" secondAttribute="trailing" id="AYK-mR-kbb"/>
                                                                 <constraint firstAttribute="width" constant="260" id="CzE-KP-vf2"/>
+                                                                <constraint firstItem="dh3-5J-avc" firstAttribute="leading" secondItem="1Pb-oR-fq6" secondAttribute="leading" id="Nev-TA-Epx"/>
                                                                 <constraint firstAttribute="height" constant="46" id="VEi-PK-yLd"/>
                                                                 <constraint firstItem="lSe-mU-585" firstAttribute="centerY" secondItem="1Pb-oR-fq6" secondAttribute="centerY" id="YYT-4Y-rkB"/>
+                                                                <constraint firstAttribute="bottom" secondItem="dh3-5J-avc" secondAttribute="bottom" id="gIz-ZM-8SL"/>
                                                                 <constraint firstItem="lSe-mU-585" firstAttribute="leading" secondItem="1Pb-oR-fq6" secondAttribute="leading" constant="16" id="gy0-LQ-Jtz"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Rqf-i0-gW1" secondAttribute="trailing" constant="8" id="lVg-uM-S0l"/>
                                                                 <constraint firstItem="Rqf-i0-gW1" firstAttribute="centerY" secondItem="lSe-mU-585" secondAttribute="centerY" id="qxn-2o-tIN"/>
+                                                                <constraint firstItem="dh3-5J-avc" firstAttribute="top" secondItem="1Pb-oR-fq6" secondAttribute="top" id="wqa-yE-4h2"/>
                                                             </constraints>
                                                             <userDefinedRuntimeAttributes>
                                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -2608,6 +2617,7 @@
                                                         <constraint firstItem="GLE-31-aKx" firstAttribute="centerX" secondItem="nNz-8O-7pS" secondAttribute="centerX" id="t65-gb-t6n"/>
                                                         <constraint firstItem="ZGu-8z-kvs" firstAttribute="centerY" secondItem="GLE-31-aKx" secondAttribute="centerY" id="vDP-Qh-0iT"/>
                                                         <constraint firstItem="nKf-8y-GSZ" firstAttribute="centerY" secondItem="nDh-Wu-FR1" secondAttribute="centerY" id="vEb-b3-qSz"/>
+                                                        <constraint firstItem="1Pb-oR-fq6" firstAttribute="leading" secondItem="nDh-Wu-FR1" secondAttribute="leading" constant="20" id="yR7-TN-zBf"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -2624,6 +2634,8 @@
                                             <outlet property="backBtn" destination="Ucn-xK-KOU" id="Z8W-3c-fzB"/>
                                             <outlet property="buybtn" destination="olV-Bm-K7O" id="0Km-7A-OKO"/>
                                             <outlet property="commentBtn" destination="j1f-OY-AVj" id="d0H-NQ-XzI"/>
+                                            <outlet property="commentTFBtn" destination="dh3-5J-avc" id="RVH-SF-LDQ"/>
+                                            <outlet property="commentTFBtnView" destination="1Pb-oR-fq6" id="1Bb-zY-Hf9"/>
                                             <outlet property="exclamationbtn" destination="TrJ-8G-7wa" id="pa5-fT-ciN"/>
                                             <outlet property="exclamationview" destination="cZf-Nq-Ktz" id="Pd4-Dr-tx2"/>
                                             <outlet property="expandbtn" destination="ZGu-8z-kvs" id="oP4-cu-U9Z"/>
@@ -2636,7 +2648,7 @@
                                             <outlet property="likebtn" destination="tBo-P3-hR8" id="WoI-SW-K2o"/>
                                             <outlet property="likelbl" destination="oiH-eV-3fl" id="StD-1x-q5i"/>
                                             <outlet property="likeview" destination="KaE-Cw-OL9" id="vD1-cI-ftg"/>
-                                            <outlet property="saysomethingfield" destination="4F7-Z7-1i2" id="f4N-Ir-xKk"/>
+                                            <outlet property="saysomethingfield" destination="Rqf-i0-gW1" id="NNG-bY-NhK"/>
                                             <outlet property="sharebtn" destination="OQF-zr-jJF" id="SWW-3i-MZb"/>
                                             <outlet property="shareview" destination="mqw-Na-gOR" id="C4l-fF-R2Q"/>
                                             <outlet property="shoowcaseheight" destination="bZU-hQ-bil" id="u1b-QO-9o3"/>
@@ -2719,17 +2731,14 @@
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="lightTextColor">
-            <color white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="separatorColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
